--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^15.4.3",
+    "@next/third-parties": "^15.5.3",
     "next": "15.4.2",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
